--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,10 +15,14 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0"
+
+        // Add this block
+        buildConfigField("String", "TMDB_API_KEY", "\"${project.findProperty('TMDB_API_KEY') ?: ''}\"")
     }
 
     buildFeatures {
         compose true
+        buildConfig true  // Add this line to enable BuildConfig
     }
 
     composeOptions {
