--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -6,6 +6,8 @@ formatting:
   Indentation:
     active: false
     indentSize: 2
+  Filename:
+    active: false
 style:
   MagicNumber:
     active: false
