Refactor TopBar by extracting distinct composable functions, disable "TooManyFunctions" rule in detekt configuration

--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -18,6 +18,8 @@ complexity:
     threshold: 100
   LongParameterList:
     active: false
+  TooManyFunctions:
+    active: false
 naming:
   FunctionNaming:
     active: true
