--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -13,6 +13,8 @@ style:
     active: false
   WildcardImport:
     active: false
+  UnusedImports:
+    active: true
 complexity:
   LongMethod:
     threshold: 100
