Update Kotlin to 2.0, refactor Gradle plugin configurations to use version catalog, and add missing Detekt and Kotlin Serialization plugin definitions

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,7 +20,6 @@ coroutines = "1.7.3"
 coil = "2.4.0"
 navigation-compose = "2.7.5"
 uiTextGoogleFonts = "1.7.0"
-ksp = "2.0.0-1.0.21"
 
 [libraries]
 androidx-ui-text-google-fonts = { module = "androidx.compose.ui:ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
@@ -56,4 +55,6 @@ androidx-navigation-compose = { group = "androidx.navigation", name = "navigatio
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detektFormatting" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
